unpackaged/main/default/objects/Supplier_Invoice__c/Supplier_Invoice__c.object-meta.xml
<CustomObject>
    <description>Supplier Invoice</description>
    <label>Supplier Invoice</label>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Salesforce Internal Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>