unpackaged/main/default/objects/Supplier_Invoice__c/fields/Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>Account_Reference__c</fullName>
    <formula>IF( ISBLANK( Purchase_Order__r.Supplier_Account__r.Exchequer_Ref__c ),  Purchase_Order__r.Supplier_Account__r.Account_Reference__c	  ,  Purchase_Order__r.Supplier_Account__r.Exchequer_Ref__c )</formula>
    <label>Account Reference</label>
    <type>Text</type>
</CustomField>