unpackaged/main/default/objects/Supplier_Invoice__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>TEXT(Purchase_Order__r.Supplier_Account__r.Account_Type__c)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>