unpackaged/main/default/objects/Supplier_Invoice__c/fields/Exchequer_Department_Ref__c.field-meta.xml
<CustomField>
    <fullName>Exchequer_Department_Ref__c</fullName>
    <formula>if(  ISBLANK( Purchase_Order__r.Supplier_Account__r.Exchequer_Department_Ref__c ) , &quot;KK&quot;, Purchase_Order__r.Supplier_Account__r.Exchequer_Department_Ref__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exchequer Department Ref</label>
    <type>Text</type>
</CustomField>