unpackaged/main/default/objects/Supplier_Invoice__c/fields/Exchequer_General_Ledger_Code__c.field-meta.xml
<CustomField>
    <fullName>Exchequer_General_Ledger_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchequer General Ledger Code</label>
    <referenceTo>Exchequer_General_Ledger_Code__c</referenceTo>
    <relationshipLabel>Supplier Invoices</relationshipLabel>
    <relationshipName>Supplier_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>