unpackaged/main/default/objects/Supplier_Invoice__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GL code for the purchase order. Derived from the GL Code for Type of Purchase(to be confirmed with Richard/Jeya), Customer(Domestic/Commercial), Payment Type(Cash/Credit), Trade</description>
    <label>GL Code</label>
    <referenceTo>General_Ledger_Code__c</referenceTo>
    <relationshipName>Supplier_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>