unpackaged/main/default/objects/Supplier_Invoice__c/fields/GL_Code_Value__c.field-meta.xml
<CustomField>
    <fullName>GL_Code_Value__c</fullName>
    <formula>GL_Code__r.Code__c</formula>
    <label>GL Code Value</label>
    <type>Text</type>
</CustomField>