unpackaged/main/default/objects/Supplier_Invoice__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Date on Supplier’s Invoice</description>
    <label>Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>