unpackaged/main/default/objects/Supplier_Invoice__c/fields/Invoice_Value_Gross__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Value_Gross__c</fullName>
    <formula>Invoice_Value_NET__c +  Invoice_Value_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Value Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>