unpackaged/main/default/objects/Supplier_Invoice__c/fields/Invoice_Value_NET__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Value_NET__c</fullName>
    <label>Invoice Value NET</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>