unpackaged/main/default/objects/Supplier_Invoice__c/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <formula>Purchase_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order Number</label>
    <type>Text</type>
</CustomField>