unpackaged/main/default/objects/Supplier_Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Supplier Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Supplier_Invoice_Status</valueSetName>
    </valueSet>
</CustomField>