unpackaged/main/default/objects/Supplier_Invoice__c/fields/Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account__c</fullName>
    <formula>Purchase_Order__r.Supplier_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Account</label>
    <type>Text</type>
</CustomField>