unpackaged/main/default/objects/Supplier_Invoice__c/fields/Supplier_City__c.field-meta.xml
<CustomField>
    <fullName>Supplier_City__c</fullName>
    <formula>Purchase_Order__r.Supplier_Account__r.BillingCity</formula>
    <label>Supplier City</label>
    <type>Text</type>
</CustomField>