unpackaged/main/default/objects/Supplier_Invoice__c/fields/Supplier_Country__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Country__c</fullName>
    <formula>Purchase_Order__r.Supplier_Account__r.BillingCountry</formula>
    <label>Supplier Country</label>
    <type>Text</type>
</CustomField>