unpackaged/main/default/objects/Supplier_Invoice__c/fields/Supplier_County__c.field-meta.xml
<CustomField>
    <fullName>Supplier_County__c</fullName>
    <formula>Purchase_Order__r.Supplier_Account__r.BillingState</formula>
    <label>Supplier County</label>
    <type>Text</type>
</CustomField>