unpackaged/main/default/objects/Supplier_Invoice__c/fields/Supplier_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Number__c</fullName>
    <description>This will be used for a supplier invoice reference number and will be sent either by Email or Post</description>
    <label>Supplier Invoice/Credit Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>