unpackaged/main/default/objects/Supplier_Invoice__c/fields/Supplier_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Postal_Code__c</fullName>
    <formula>Purchase_Order__r.Supplier_Account__r.BillingPostalCode</formula>
    <label>Supplier Postal Code</label>
    <type>Text</type>
</CustomField>