unpackaged/main/default/objects/Supplier_Invoice__c/fields/Supplier_Street__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Street__c</fullName>
    <formula>Purchase_Order__r.Supplier_Account__r.BillingStreet</formula>
    <label>Supplier Street</label>
    <type>Text</type>
</CustomField>