unpackaged/main/default/objects/Supplier_Invoice__c/listViews/All_Supplier_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Supplier_Invoices</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>SI-003613</value>
    </filters>
    <label>All Supplier Invoices</label>
</ListView>